--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "devDependencies": {
     "eslint": "^2.8.0",
     "eslint-config-trails": "^1.0.4",
+    "jade": "^1.11.0",
     "mocha": "^2.4.5",
     "smokesignals": "^1.0.7",
     "trailpack-core": "^1.0.0-beta-6",
+    "trailpack-express4": "^1.0.0-beta-1",
+    "trailpack-router": "^1.0.0-beta-4",
     "trails": "^1.0.0-beta-8"
   },
   "scripts": {
