--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trailpack-pdf",
   "version": "0.0.1",
-  "description": "Trailpack to generate PDF from routes or templates for Trails.js project",
+  "description": "Trailpack to generate PDF/IMAGE from routes or templates for Trails.js project",
   "homepage": "https://github.com/jaumard/trailpack-pdf",
   "author": {
     "name": "jaumard",
@@ -16,6 +16,9 @@
     "phantom",
     "phantomjs",
     "pdf",
+    "image",
+    "png",
+    "jpeg",
     "pdf generator"
   ],
   "dependencies": {
