--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-- '4'
-- stable
+- 4
+- 5
+- 6
 notifications:
   email: false
   webhooks:
@@ -17,4 +18,4 @@ deploy:
   on:
     tags: true
     repo: jaumard/trailpack-pdf
-    node: stable
+    node: 6
